# loopscart-plugin-fcm

./: .gitignore  README.md  setup.py
Django_FCM_package/: .python-version  README.md  manage.py  pyproject.toml  setup.py
Django_FCM_package/FCM_package/: asgi.py
Django_FCM_package/api/: models.py  views.py
Django_FCM_package/api/migrations/: 0001_initial.py  0002_alter_fcmcertificate_certificate_json.py  0003_remove_fcmcertificate_certificate_json_and_more.py  0004_rename_certificate_file_fcmcertificate_certificate_json.py  0005_alter_fcmcertificate_certificate_json.py
Django_FCM_package/fcm_messaging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fcm_messaging/: apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
fcm_messaging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fcm_messaging/migrations/: 0001_initial.py  0002_alter_fcmcertificate_id.py  0002_fcmlog_userdevice_delete_user_and_more.py  0003_fcmcertificate_firebase_config_and_more.py  0003_user.py  0004_rename_is_dashbaord_login_userdevice_is_dashboard_login.py
my-message-app/: package-lock.json  package.json
my-message-app/public/: firebase-messaging-sw.js
my-message-app/src/: App.jsx  firebase.jsx
